--- a/home.html
+++ b/home.html
@@ -345,12 +345,16 @@
 
 
 
+<div class="container">
 
+<div class="row mt-5">
+  <div class="col-12">
+    <h1 class="text-white" style="border-bottom: 2px #fff solid">Most Visited Places</h1>
+  </div>
+  
+</div>
 
-<hr>
-<h3><center>Most visited Places</center></h3>
-
-<div class="bd-example">
+<div class="bd-example mt-4">
   <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -359,24 +363,24 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="https://www.newsclick.in/sites/default/files/2019-06/railway1.jpg" class="d-block w-100" alt="..."style="height: 500px">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <h3> HOWRAH</h3>
+          <h4>Most visited Places</h4>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="https://www.newsclick.in/sites/default/files/2019-06/railway1.jpg" class="d-block w-100" alt="..."style="height: 500px">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <h3>MUMBAI</h3>
+          <h4>Most visited Places.</h4>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="https://www.newsclick.in/sites/default/files/2019-06/railway1.jpg" class="d-block w-100" alt="..."style="height: 500px">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          <h3>DEHLI</h3>
+          <h4>Most visited Places</h4>
         </div>
       </div>
     </div>
@@ -391,10 +395,24 @@
   </div>
 </div>
 
+</div>
 
 
 
+<!--footer-->
+<!-- Footer -->
 
+<!-- Footer -->
+<footer class="page-footer font-small blue">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3 mb-3 mt-4"style="background-color: white">© 2020 Copyright souvik Parui:
+    <a href="#">Mr.Parui</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 
 
 
@@ -487,4 +505,3 @@
 <script type="text/javascript" src="js/app.js"></script>
 
 </body>
-</html>
